safari home banner z-index problem fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2361,6 +2361,10 @@ form#contactform,form#mcontactform{
     }
     
   }
+  main>section,footer{
+    -webkit-transform: translate3d(0,0,0);
+  }
+
 }
 .sc-our-clients{
   position: relative;
